<resources>
    <string name="app_name">MyMovies</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="username_required">USERNAME*</string>
    <string name="email_required">EMAIL*</string>
    <string name="password_required">PASSWORD*</string>
    <string name="username">USERNAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD*</string>
    <string name="search">Search</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
</resources>
